# ethers-rs

ethers-contract/ethers-contract-abigen/: Cargo.toml
ethers-contract/ethers-contract-abigen/src/: lib.rs
ethers-contract/src/: event.rs
ethers-core/src/types/: chain.rs
ethers-signers/: Cargo.toml
evm-adapters/: Cargo.toml
evm-adapters/src/: evm_opts.rs
